; ModuleID = '/home/carl/AnghaBench/netdata/tests/profile/extr_statsd-stress.c_myrand.c'
source_filename = "/home/carl/AnghaBench/netdata/tests/profile/extr_statsd-stress.c_myrand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RAND_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @myrand(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @RAND_MAX, align 8
  %8 = udiv i64 %6, %7
  store i64 %8, i64* %3, align 8
  %9 = call i64 (...) @rand()
  store i64 %9, i64* %5, align 8
  store i64 0, i64* %4, align 8
  br label %10

10:                                               ; preds = %18, %1
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %10
  %15 = call i64 (...) @rand()
  %16 = load i64, i64* %5, align 8
  %17 = add i64 %16, %15
  store i64 %17, i64* %5, align 8
  br label %18

18:                                               ; preds = %14
  %19 = load i64, i64* %4, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %4, align 8
  br label %10

21:                                               ; preds = %10
  %22 = load i64, i64* %5, align 8
  %23 = load i64, i64* %2, align 8
  %24 = urem i64 %22, %23
  ret i64 %24
}

declare dso_local i64 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
